--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.2.1",
+    "@contentstack/utils": "^1.3.0",
     "astro": "^3.4.0",
+    "contentstack": "^3.17.1",
     "motion": "^10.16.4",
     "typescript": "^5.2.2"
   },
