--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -61,8 +61,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.18.0"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: ${{ env.BUILD_PATH }}/bun.lockb
+          # cache: ${{ steps.detect-package-manager.outputs.manager }}
+          # cache-dependency-path: ${{ env.BUILD_PATH }}/bun.lockb
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
