--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -27,8 +27,8 @@ concurrency:
 env:
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
-  BASE_URL: "firenzo.github.io/contentstack-certification-assignment"
-  SITE_URL: "/contentstack-certification-assignment"
+  SITE_URL: "firenzo.github.io"
+  BASE_URL: "/contentstack-certification-assignment"
   NODE_ENV: "dev"
 
 jobs:
