--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -29,7 +29,7 @@ env:
   # BUILD_PATH: subfolder
   SITE_URL: "firenzo.github.io"
   BASE_URL: "/contentstack-certification-assignment"
-  NODE_ENV: "dev"
+  NODE_ENV: "prd"
 
 jobs:
   build:
