--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -39,6 +39,7 @@ env:
 jobs:
   build:
     name: Build
+    environment: github-pages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
