--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.2.1",
+    "@astrojs/netlify": "^3.0.3",
     "@contentstack/utils": "^1.3.0",
     "astro": "^3.4.0",
     "contentstack": "^3.17.1",
